# taprtools

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
bak/: tag_to_filename.rs
bak/tfmt/: ast.rs  genastdot.rs  lexer.rs  mod.rs  parser.rs
buffered-iterator/: Cargo.toml
buffered-iterator/src/: lib.rs
doc/: language_idea.md  ogg.rs  sync.tfmt  tfmt.ebnf
examples/: sync.tapr
file-history/: Cargo.toml
file-history/src/: action.rs  actiongroup.rs  database.rs  disk.rs  error.rs  history.rs  lib.rs  util.rs
file-history/testdata/: ref.hist.txt
file-history/tests/: test_file_history.rs
src/: error.rs  file.rs  gui.rs  helpers.rs  lib.rs  logger.rs  new_error.rs  script.rs  tags.rs  tapr.rs  tfmt.rs
src/cli/: argparse.rs  args.rs  config.rs  fs.rs  helpers.rs  history.rs  histviewer.rs  inspector.rs  logging.rs  main.rs  mod.rs  rename.rs  strings.rs  tag_to_filename.rs  tag_to_filename.yml  tfmt.rs  tfmt.yml  tfmttools.rs  tfmttools.yml  ui.rs  validate.rs
src/cli/commands/: clear_history.rs  inspect_script.rs  list_scripts.rs  mod.rs  rename.rs  render_script.rs  seed.rs  undo.rs
src/cli/commands/rename/: main.rs  mod.rs  ui.rs  validate.rs
src/file/: audio_file.rs  audiofile.rs  mod.rs  mp3.rs  ogg.rs
src/tags/: mod.rs  mp3.rs  ogg.rs
src/tfmt/: ast.rs  buffered_iterator.rs  error.rs  function.rs  genastdot.rs  interpreter.rs  lexer.rs  mod.rs  new_ast.rs  new_function.rs  new_interpreter.rs  new_lexer.rs  new_parser.rs  new_semantic.rs  new_token.rs  new_visitor.rs  parser.rs  semantic.rs  token.rs  visitor.rs  visualizer.rs
src/tfmt/ast/: node.rs  parser.rs  visitor.rs
src/tfmt/visitors/: inspector.rs  interpreter.rs  mod.rs  semantic.rs  visualizer.rs
test-harness/: Cargo.toml
test-harness/src/: lib.rs
testdata/: test.hist  tfmttools.hist
testdata/history/: ref.hist.txt  test.hist  verbose.hist.txt
testdata/music/: mbr.m3u8
testdata/script/: typical_input.tfmt
tests/: test_interpreter.rs  test_lexer.rs  test_new_interpreter.rs  test_new_lexer.rs  test_new_parser.rs  test_parser.rs  test_tfmttools.rs
tests/common/: mod.rs
tests/files/config/: typical_input.tfmt
tests/files/music/: basic.m3u  extended.m3u
tests/testdata/script/: simple_input.tapr
tfmt/: Cargo.toml
tfmt/src/: audio_file.rs  error.rs  function.rs  lexer.rs  lib.rs  script.rs  tags.rs  token.rs
tfmt/src/ast/: mod.rs  node.rs  parser.rs  visitor.rs
tfmt/src/visitor/: dot.rs  interpreter.rs  mod.rs  semantic.rs  visitor_trait.rs
tfmt/src/visitors/: inspector.rs  interpreter.rs  mod.rs  semantic.rs  visualizer.rs
tfmt/testdata/: simple_input.tfmt  typical_input.tfmt
tfmttools/: Cargo.toml
tfmttools/doc/: ogg.rs
tfmttools/src/: cli.rs  gui.rs  helpers.rs  lib.rs
tfmttools/src/cli/: argparse.rs  inspector.rs  rename.rs  tfmt.rs  validate.rs
tfmttools/src/file/: audio_file.rs  mp3.rs  ogg.rs
tfmttools/src/tfmt/: ast.rs  error.rs  function.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  semantic.rs  token.rs  visitors.rs  visualizer.rs
tfmttools/src/tfmt/ast/: parser.rs
tfmttools/src/tfmt/visitors/: inspector.rs  interpreter.rs  semantic.rs  visualizer.rs
tfmttools/testdata/script/: collisions.tfmt
tfmttools/tests/: test_interpreter.rs  test_parser.rs  test_tfmttools.rs
