[package]
authors = ["Stef Korporaal <stefkorporaal@gmail.com>"]
default-run = "tfmt"
description = "Renames audio files according to their tags."
edition = "2021"
license = "BSD-3-Clause"
name = "tfmttools"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["graphviz"]
graphviz = []

[dependencies]
buffered-iterator = {path = "./buffered-iterator"}
file-history = {path = "./file-history"}
tfmt = {path = "./tfmt"}

anyhow = "1.0"
clap = {version = "3", features = ["derive", "wrap_help"]}
dirs = "4.0"
dunce = "1.0.2"
id3 = "1.0.2"
indicatif = "0.16"
lewton = "0.10"
# rayon = "1.5"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
once_cell = "1.9"
predicates = "2.0"
tempfile = "3"
test-harness = {path = "./test-harness"}

[workspace]
members = [
  "./buffered-iterator",
  "./file-history",
  "./test-harness",
  "./tfmt",
]
