[package]
authors = ["Stef Korporaal <stefkorporaal@gmail.com>"]
default-run = "tfmt"
description = "Renames audio files according to their tags."
edition = "2021"
license = "BSD-3-Clause"
name = "tfmttools"
rust-version = "1.56"
version = "0.9.1"

[workspace]
members = [
  "./buffered-iterator",
  "./file-history",
  "./test-harness",
  "./tfmt",
]

[features]
default = ["graphviz"]
graphviz = []

[dependencies]
buffered-iterator = {path = "./buffered-iterator"}
file-history = {path = "./file-history"}
tfmt = {path = "./tfmt"}

anyhow = "1.0"
clap = {version = "3", features = ["derive", "wrap_help"]}
dirs = "4.0"
dunce = "1"
indicatif = "0.16"
lofty = "0.14"

[dev-dependencies]
test-harness = {path = "./test-harness"}

assert_cmd = "2.0"
assert_fs = "1.0"
once_cell = "1.9"
predicates = "2.1"
