[package]
authors = ["Stef Korporaal <stefkorporaal@gmail.com>"]
default-run = "tapr"
description = "Tag Processing Tools. Renames audio files according to their tags."
edition = "2021"
license = "BSD-3-Clause"
name = "taprtools"
rust-version = "1.70"
version = "0.11.0"

[workspace]
members = [
  "./buffered-iterator",
  "./file-history",
  "./test-harness",
]

[dependencies]
buffered-iterator = {path = "./buffered-iterator"}
file-history = {path = "./file-history"}
tapr = { git = "https://github.com/Hellrespawn/tapr.git" }

anyhow = "1.0"
clap = {version = "3", features = ["derive", "wrap_help"]}
conv = "0.3"
dirs = "4.0"
dunce = "1"
indicatif = "0.16"
lofty = "0.14"
once_cell = "1"

[dev-dependencies]
test-harness = {path = "./test-harness"}

assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"
