[package]
name = "buffered-iterator"
version = "0.1.0"
authors = ["Stef Korporaal <stefkorporaal@gmail.com>"]
description = "Buffers iterator for arbitrary peeking."
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
