[package]
name = "file-history"
version = "0.1.0"
authors = ["Stef Korporaal <stefkorporaal@gmail.com>"]
description = "Tracks moving of files and creating/removing directories."
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
clap = "2"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
