[package]
authors = ["Stef Korporaal <stefkorporaal@gmail.com>"]
description = "Tracks moving of files and creating/removing directories."
edition = "2018"
license = "BSD-3-Clause"
name = "file-history"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rusqlite = {version = "0.26.0", features = ["bundled"]}
thiserror = "1.0"
