[package]
authors = ["Stef Korporaal <stefkorporaal@gmail.com>"]
description = "Constructs a string based on a script and audiofile tags"
edition = "2021"
license = "BSD-3-Clause"
name = "tfmt"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buffered-iterator = {path = "../buffered-iterator"}

dunce = "1.0"
itertools = "0.10.3"
log = "0.4"
once_cell = "1.9.0"
regex = "1"
thiserror = "1.0"
unicode-segmentation = "1.9.0"

[dev-dependencies]
anyhow = "1.0"
